force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
    <nameField>
        <label>Order Name</label>
        <type>AutoNumber</type>
        <displayFormat>ORD-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>