force-app/main/default/objects/Order__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <label>Total Price</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>