force-app/main/default/objects/Order__c/fields/TotalProductCount__c.field-meta.xml
<CustomField>
    <fullName>TotalProductCount__c</fullName>
    <label>Total Product Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>